--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <h5 class="card-title">Clikc in button to get first two card</h5>
       <button type="button" class="btn btn-primary btn-lg" id="btn-start">start game</button>
     </div>
-    <div class="output"></div>
+    <div class="output" id="output"></div>
+    <div id="score"></div>
   </div>
 
   
