Added functionality for drawing card

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       <h5 class="card-title">Clikc in button to get first two card</h5>
       <button type="button" class="btn btn-primary btn-lg" id="btn-start">start game</button>
     </div>
-    <div class="output" id="output"></div>
-    <div id="score"></div>
+    <div class="cardOutput" id="cardOutput"></div>
+    <div class="scoreOutput" id="scoreOutput"></div>
+    <div class="btnOutput" id="btnOutput"></div>
+    
   </div>
 
   
