--- a/index.html
+++ b/index.html
@@ -7,17 +7,48 @@
   <title>Blackjack</title>
 </head>
 <body>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Clikc in button to get first two card</h5>
-      <button type="button" class="btn btn-primary btn-lg" id="btn-start">start game</button>
+  <div class="container mt-5">
+    <div class="card">
+      <div class="card-body text-center">
+        <h5 class="card-title">Clikc in button to get first two card</h5>
+        <button type="button" class="btn btn-primary btn-lg" id="btn-start">start game</button>
+      </div>
+      <div class="cardOutput" id="cardOutput">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Player movements</th>
+            </tr>
+          </thead>
+          <tbody id="playerCards">
+          </tbody>
+        </table>
+        
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">The moves of the dealer</th>
+            </tr>
+          </thead>
+          <tbody id="dealerCards">
+          </tbody>
+        </table>
+      </div>
+      <div class="scoreOutput" id="scoreOutput">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="card" id="playerScore"></div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card" id="dealerScore"></div>
+          </div>
+        </div>
+      </div>
+      <div class="btnOutput" id="btnOutput"></div>      
     </div>
-    <div class="cardOutput" id="cardOutput"></div>
-    <div class="scoreOutput" id="scoreOutput"></div>
-    <div class="btnOutput" id="btnOutput"></div>
-    
   </div>
-
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
