--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button type="button" class="btn btn-primary btn-lg" id="btn-start">start game</button>
       </div>
       <div class="cardOutput" id="cardOutput">
-        <table class="table table-striped">
+        <table class="table table-striped" id="tablePlayer">
           <thead>
             <tr>
               <th scope="col">#</th>
@@ -26,7 +26,7 @@
           </tbody>
         </table>
         
-        <table class="table table-striped">
+        <table class="table table-striped" id="tableDealer">
           <thead>
             <tr>
               <th scope="col">#</th>
