Added functionality for entering players

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-body text-center">
-        <h5 class="card-title">Clikc in button to get first two card</h5>
-        <button type="button" class="btn btn-primary btn-lg" id="btn-start">start game</button>
+        <h5 class="card-title">Click the button to start the game</h5>
+        <button type="button" class="btn btn-primary btn-lg" id="btn-single-player">single player</button>
+        <button type="button" class="btn btn-primary btn-lg" id="btn-multiplayer">multiplayer</button>
       </div>
       <div class="cardOutput" id="cardOutput">
+        <ul class="collection" id="listOfPlayers"></ul>
         <table class="table table-striped" id="tablePlayer">
           <thead>
             <tr>
