--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <button type="button" class="btn btn-primary btn-lg" id="btn-multiplayer">multiplayer</button>
       </div>
       <div class="cardOutput" id="cardOutput">
-        <ul class="collection" id="listOfPlayers"></ul>
+        <ul class="collection" id="listOfPlayers">
+          <button class="btn btn-primary btn-lg" id="btn-start-game">Start game</button>
+        </ul>
         <table class="table table-striped" id="tablePlayer">
           <thead>
             <tr>
