Improving the functionality of the summary of results

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <button type="button" class="btn btn-primary btn-lg" id="btn-single-player">single player</button>
         <button type="button" class="btn btn-primary btn-lg" id="btn-multiplayer">multiplayer</button>
         <div id="divListGroup">
-          <ul class="list-group list-group-flush text-center" id="listOfPlayers">
-            <button class="btn btn-primary btn-lg text-center" id="btn-start-game">Start game</button>
-          </ul>
+          <ul class="list-group list-group-flush text-center" id="listOfPlayers"></ul>
         </div>   
       </div>
       <div class="row" id="rowPlayer">
