Improvement functionality of adding card to single player

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-body text-center">
-        <h5 class="card-title">Click the button to start the game</h5>
+        <h5 class="card-title">Single-deck Blackjack</h5>
         <button type="button" class="btn btn-primary btn-lg" id="btn-single-player">single player</button>
         <button type="button" class="btn btn-primary btn-lg" id="btn-multiplayer">multiplayer</button>
         <div id="divListGroup">
